--- a/wayfire.ini
+++ b/wayfire.ini
@@ -10,7 +10,7 @@ plugins = alpha animate autostart autostart-static command pixdecor expo fast-sw
 plugins_nogl = alpha animate autostart autostart-static command pixdecor expo fast-switcher grid idle move oswitch place resize switcher vswitch window-rules wm-actions background-view blur cube decoration follow-focus join_views mag scale shortcuts-inhibit water wf-info winshadows winzoom wobbly workspace-names wrot wsets zoom 
 xwayland = true
 only_decorate_gtk = true
-# focus_buttons_passthrough = true
+focus_buttons_passthrough = true
 focus_button_with_modifiers = false
 focus_buttons = BTN_LEFT | BTN_MIDDLE | BTN_RIGHT
 max_render_time = -1
@@ -50,16 +50,17 @@ command_screenshot_interactive = slurp | grim -g - ~/media/photos/screenshots/$(
 # Screensaver ──────────────────────────────────────────────────────────────────────
 
 [idle]
+toggle = <super> <shift> KEY_Z
 # -1 is disabled or set number of seconds
 # screensaver_timeout = -1
-screensaver_timeout = 120
+screensaver_timeout = 30
 # Cuts power to display 
 # dpms_timeout = -1
-dpms_timeout = 240
-toggle = <super> <shift> KEY_Z
-cube_max_zoom = 1.8
-cube_rotate_speed = 1.5
-cube_zoom_speed = 2000
+dpms_timeout = 140
+cube_max_zoom = 1.00
+cube_rotate_speed = 1.00
+# cube_rotate_speed = 2.5
+cube_zoom_speed = 20
 disable_on_fullscreen = false
 disable_initially = false
 
@@ -77,7 +78,7 @@ toggle_sticky = <super> <shift> KEY_Y
 send_to_back = <super> KEY_S | <super> KEY_B
 ## Alt-Esc is the default binding for moving between windows/tiles on a single workspace
 
-# Cycle through windows on curent workspace with animation
+# Cycle through windows on curent workspace with an animation
 [switcher]
 next_view = <super> KEY_TAB
 prev_view = <super> <shift> KEY_TAB
@@ -96,8 +97,8 @@ type = crossfade
 [window-rules]
 maximize_alacritty = on created if app_id is "Alacritty" then maximize
 maximize_lxterminal= on created if app_id is "lxterminal" then maximize
-rule_001 = on created if app_id is "lxterminal" then set alpha 0.9
-rule_002 = on created if app_id is "Alacritty" then set alpha 0.6
+rule_001 = on created if app_id is "lxterminal" then set alpha 0.6
+rule_002 = on created if app_id is "Alacritty" then set alpha 0.5
 rule_003= on created if app_id is "firefox" then maximize
 rule_004= on created if app_id is "firefox" then set alpha 0.7
 rule_005= on created if app_id is "firefox" then assign_workspace 1 1
@@ -127,11 +128,10 @@ initial_animation = 350
 light = true
 skydome_mirror = true
 skydome_texture = 
-speed_spin_horiz = 0.020000
-speed_spin_vert = 0.020000
-speed_zoom = 0.070000
-zoom = 0.100000
-
+speed_spin_horiz = 0.02
+speed_spin_vert = 0.02
+speed_zoom = 0.07
+zoom = 0.10
 # Show an overview of all workspaces.
 [expo]
 # Drag a window into a different workpace with mouse left-button
@@ -147,7 +147,7 @@ select_workspace_7 = KEY_7
 select_workspace_8 = KEY_8
 select_workspace_9 = KEY_9
 duration = 300
-inactive_brightness = 0.600000
+inactive_brightness = 0.6
 keyboard_interaction = true
 offset = 10
 transition_length = 300
@@ -155,16 +155,16 @@ transition_length = 300
 # Show windows of current workspace or entire desktop
 [scale]
 # cycle through windows with arrow keys or wm-actions.send_to_back
-toggle = <super> key_z
-toggle_all = <super> key_a
+toggle_all = <super> KEY_A
+toggle = <super> KEY_Z
 allow_zoom = false
 # bg_color = \#1a1a1ae6
 duration = 400
-inactive_alpha = 0.50000
+inactive_alpha = 0.5
 include_minimized = false
 interact = false
 middle_click_close = false
-minimized_alpha = 0.4000
+minimized_alpha = 0.4
 spacing = 50
 text_color = \#ccccccff
 title_font_size = 22
@@ -200,14 +200,14 @@ activate_preserve_aspect = none
 # Change opacity by scrolling with Super + Alt.
 [alpha]
 modifier = <super> <alt>
-min_value = 0.100000
+min_value = 0.1
 
 # Zoom in the desktop by scrolling + Super.
 [zoom]
 modifier = <super>
 interpolation_method = 0
 smoothing_duration = 300
-speed = 0.010000
+speed = 0.01
 
 # Rotate the window on a vertical axis
 [wrot]
@@ -216,7 +216,7 @@ activate-3d = <super> <shift> BTN_RIGHT
 invert = false
 reset = <super> <ctrl> KEY_R
 reset-one = <super> <shift> KEY_R
-reset_radius = 25.000000
+reset_radius = 25
 sensitivity = 24
 
 # Effects  ───────────────────────────────────────────────────────────────
@@ -228,17 +228,17 @@ blur_by_default = type is "toplevel"
 method = kawase
 bokeh_degrade = 1
 bokeh_iterations = 15
-bokeh_offset = 5.000000
+bokeh_offset = 5.0
 box_degrade = 1
 box_iterations = 2
-box_offset = 1.000000
+box_offset = 1.0
 gaussian_degrade = 1
 gaussian_iterations = 2
-gaussian_offset = 1.000000
+gaussian_offset = 1.0
 kawase_degrade = 3
 kawase_iterations = 2
-kawase_offset = 2.000000
-saturation = 1.000000
+kawase_offset = 2.0
+saturation = 1.0
 toggle = none
 
 [animate]
@@ -254,18 +254,17 @@ zoom_duration = 500
 zoom_enabled_for = none
 
 [wobbly]
-friction = 3.000000
+friction = 3.00
 grid_resolution = 6
-spring_k = 8.000000
-
+spring_k = 8.00
 # Misc  ───────────────────────────────────────────────────────────────
 
 [output]
 mode = auto
-#mode = 1920x1080@60.000000 # or just 1920x1080
+# mode = 1920x1080@60.00 or just 1920x1080
 position = auto
 # try setting scale to 1.5 for larger fonts
-scale = 1.000000
+scale = 1.00
 transform = normal
 
 [preserve-output]
@@ -294,7 +293,7 @@ text_color = \#CCCCCCCC
 
 [workspace-names]
 background_color = \#333333B3
-background_radius = 30.000000
+background_radius = 30.0
 display_duration = 500
 font = sans-serif
 margin = 0
@@ -327,9 +326,8 @@ threshold = 10
 
 [keycolor]
 color = \#000000FF
-opacity = 0.250000
-threshold = 0.500000
-
+opacity = 0.25
+threshold = 0.50
 [mag]
 default_height = 500
 toggle = <alt> <super> KEY_M
@@ -377,7 +375,6 @@ zoom_level = 75
 # key_focus_left = <super> <alt> KEY_H | <super> KEY_U
 # key_focus_right = <super> <alt> KEY_L | <super> KEY_P
 
-
 # [input-device]
 # output = 
 
@@ -394,4 +391,3 @@ zoom_level = 75
 # close_fingers = 20
 # move_delay = 500
 # move_fingers = 3
-
