--- a/wayfire.ini
+++ b/wayfire.ini
@@ -28,7 +28,7 @@ binding_mute = KEY_MUTE
 command_mute = wfpanelctl volumepulse mute
 binding_launcher= <super> KEY_D
 command_launcher= wfpanelctl smenu menu
-binding_lxterminal = <super> KEY_T
+binding_lxterminal = <super> KEY_T | <super> KEY_ENTER
 command_lxterminal = lxterminal
 binding_bluetooth = <super> <shift> KEY_B
 command_bluetooth = wfpanelctl bluetooth menu
@@ -38,8 +38,6 @@ binding_quit = <ctrl> <alt> KEY_DELETE
 command_quit = lxde-pi-shutdown-helper
 binding_power = KEY_POWER
 command_power = pwrkey
-binding_terminal = <super> KEY_ENTER | <super> KEY_N
-command_terminal = alacritty
 binding_changewallpaper = <super> KEY_W
 command_changewallpaper = find -L $HOME/media/photos/wallpapers -type f | sort -R | head -n 1 | xargs swaybg --image
 binding_screenshot = KEY_SYSRQ | KEY_PRINT
@@ -53,13 +51,12 @@ command_screenshot_interactive = slurp | grim -g - ~/media/photos/screenshots/$(
 toggle = <super> <shift> KEY_Z
 # -1 is disabled or set number of seconds
 # screensaver_timeout = -1
-screensaver_timeout = 30
+screensaver_timeout = 90
 # Cuts power to display 
 # dpms_timeout = -1
-dpms_timeout = 140
+dpms_timeout = 150
 cube_max_zoom = 1.00
 cube_rotate_speed = 1.00
-# cube_rotate_speed = 2.5
 cube_zoom_speed = 20
 disable_on_fullscreen = false
 disable_initially = false
@@ -132,6 +129,7 @@ speed_spin_horiz = 0.02
 speed_spin_vert = 0.02
 speed_zoom = 0.07
 zoom = 0.10
+
 # Show an overview of all workspaces.
 [expo]
 # Drag a window into a different workpace with mouse left-button
@@ -257,6 +255,7 @@ zoom_enabled_for = none
 friction = 3.00
 grid_resolution = 6
 spring_k = 8.00
+
 # Misc  ───────────────────────────────────────────────────────────────
 
 [output]
