--- a/wayfire.ini
+++ b/wayfire.ini
@@ -80,6 +80,9 @@ send_to_back = <super> KEY_S | <super> KEY_B
 next_view = <super> KEY_TAB
 prev_view = <super> <shift> KEY_TAB
 
+[fast-switcher]
+activate = <super> KEY_ESC
+
 # Position the windows as tiles; left, center or right
 [grid]
 slot_l = <alt> KEY_H
