--- a/wayfire.ini
+++ b/wayfire.ini
@@ -1,4 +1,3 @@
-#───────────────────────────────────────────────────────────────
 # Raspberry Pi OS (Bookworm) config for Pi4 & Pi5 
 # Inspired by https://github.com/bluebyt/Wayfire-dots and CatchyOS config
 # Git blame: Briain O'Dricoll https://github.com/gnmearacaun/rpios-wayfirewm-config
@@ -26,9 +25,9 @@ repeatable_binding_volume_down = KEY_VOLUMEDOWN
 command_volume_down = wfpanelctl volumepulse vold
 binding_mute = KEY_MUTE
 command_mute = wfpanelctl volumepulse mute
-binding_launcher= <super> KEY_D
+binding_launcher= <super> KEY_X
 command_launcher= wfpanelctl smenu menu
-binding_lxterminal = <super> KEY_T | <super> KEY_ENTER
+binding_lxterminal = <super> KEY_T
 command_lxterminal = lxterminal
 binding_bluetooth = <super> <shift> KEY_B
 command_bluetooth = wfpanelctl bluetooth menu
@@ -38,12 +37,21 @@ binding_quit = <ctrl> <alt> KEY_DELETE
 command_quit = lxde-pi-shutdown-helper
 binding_power = KEY_POWER
 command_power = pwrkey
+binding_terminal = <super> KEY_ENTER | <super> KEY_O
+command_terminal = alacritty
 binding_changewallpaper = <super> KEY_W
 command_changewallpaper = find -L $HOME/media/photos/wallpapers -type f | sort -R | head -n 1 | xargs swaybg --image
 binding_screenshot = KEY_SYSRQ | KEY_PRINT
 command_screenshot = grim $HOME/media/photos/screenshots/$(date "+%Y-%m-%d-%H:%M").webp
 binding_screenshot_interactive = <alt> KEY_SYSRQ | <alt> KEY_PRINT
 command_screenshot_interactive = slurp | grim -g - ~/media/photos/screenshots/$(date "+%Y-%m-%d-%H:%M").webp
+# global shortcuts for audacious music player
+binding_playpause = <super> KEY_U
+command_playpause = dbus-send --print-reply --dest=org.mpris.MediaPlayer2.audacious /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.PlayPause
+binding_next = <super> KEY_N
+command_next = dbus-send --print-reply --dest=org.mpris.MediaPlayer2.audacious /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Next
+binding_previous = <super> KEY_P
+command_previous = dbus-send --print-reply --dest=org.mpris.MediaPlayer2.audacious /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Previous
 
 # Screensaver ──────────────────────────────────────────────────────────────────────
 
@@ -61,6 +69,7 @@ cube_zoom_speed = 20
 disable_on_fullscreen = false
 disable_initially = false
 
+
 # Windows ──────────────────────────────────────────────────────────────────────
 
 # Actions related to window management functionalities.
@@ -68,11 +77,11 @@ disable_initially = false
 toggle_maximize = <super> KEY_F
 toggle_fullscreen = <super> <shift> KEY_F
 toggle_showdesktop = <super> <shift> KEY_D
-toggle_always_on_top = <super> KEY_Y
-toggle_sticky = <super> <shift> KEY_Y
+toggle_sticky = <super> KEY_Y
+toggle_always_on_top = <super> <shift> KEY_Y
 # Switch between windows (without animation)
 # Cycles focus through windows of all workspaces on row, kind of annoying
-send_to_back = <super> KEY_S | <super> KEY_B
+send_to_back = <super> KEY_D | <super> KEY_B
 ## Alt-Esc is the default binding for moving between windows/tiles on a single workspace
 
 # Cycle through windows on curent workspace with an animation
@@ -81,44 +90,44 @@ next_view = <super> KEY_TAB
 prev_view = <super> <shift> KEY_TAB
 
 [fast-switcher]
-activate = <super> KEY_ESC
+activate = <super> KEY_S 
 
 # Position the windows as tiles; left, center or right
-[grid]
-slot_l = <alt> KEY_H
-slot_c = <alt> KEY_K
-slot_r = <alt> KEY_L
-restore = <alt> KEY_J
-mouse_snap = true
-duration = 300
-type = crossfade
+  [grid]
+  slot_l = <alt> KEY_H
+  slot_c = <alt> KEY_K
+  slot_r = <alt> KEY_L
+  restore = <alt> KEY_J
+  mouse_snap = true
+  duration = 300
+  type = crossfade
 
 # https://github.com/WayfireWM/wayfire/wiki/Configuration#window-rules
-[window-rules]
-maximize_alacritty = on created if app_id is "Alacritty" then maximize
-maximize_lxterminal= on created if app_id is "lxterminal" then maximize
-rule_001 = on created if app_id is "lxterminal" then set alpha 0.6
-rule_002 = on created if app_id is "Alacritty" then set alpha 0.5
-rule_003= on created if app_id is "firefox" then maximize
-rule_004= on created if app_id is "firefox" then set alpha 0.7
-rule_005= on created if app_id is "firefox" then assign_workspace 1 1
+  [window-rules]
+  maximize_alacritty = on created if app_id is "Alacritty" then maximize
+  maximize_lxterminal= on created if app_id is "lxterminal" then maximize
+  rule_001 = on created if app_id is "lxterminal" then set alpha 0.6
+  rule_002 = on created if app_id is "Alacritty" then set alpha 0.5
+  rule_003= on created if app_id is "firefox" then maximize
+  rule_004= on created if app_id is "firefox" then set alpha 0.7
+  rule_005= on created if app_id is "firefox" then assign_workspace 1 1
 # rule_018= on created if app_id is "brave-browser-beta" then move 270 70
-rule_021 = on created if app_id is "calculator" then set geometry 270 820 800 500
+  rule_021 = on created if app_id is "calculator" then set geometry 270 820 800 500
 
 # Workspaces ───────────────────────────────────────────────────────────────────
 
 # Switch workspaces
-[vswitch]
-binding_left = <super> KEY_H
-binding_down = <super> KEY_J
-binding_up = <super> KEY_K
-binding_right = <super> KEY_L
-wraparound = false
+  [vswitch]
+  binding_left = <super> KEY_H
+  binding_down = <super> KEY_J
+  binding_up = <super> KEY_K
+  binding_right = <super> KEY_L
+  wraparound = false
 
 # Switch workspaces on same row with cube animation. 
-[cube]
-rotate_left = <super> KEY_M
-rotate_right = <super> KEY_COMMA
+  [cube]
+  rotate_left = <super> KEY_M
+  rotate_right = <super> KEY_COMMA
 # activate = <alt> <ctrl> BTN_LEFT 
 background = \#1A1A1AFF
 background_mode = simple
@@ -174,7 +183,7 @@ title_position = center
 
 # Switch to the next output.
 [oswitch]
-next_output = <super> KEY_O
+next_output = <super> <ctrl> KEY_O
 next_output_with_win = <super> <shift> KEY_O
 
 # Mouse bindings ───────────────────────────────────────────────────────────────
